stoat/src/snapshots/tui/stoat__test_harness__review_unstage_chunk.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: n
focused: #1 of 1
mode: review
size: 80x14
---
[0m[31m-[0m[90m   1 [0m[31ma[0m                                [0m[90m│[0m[31m-[0m[90m   1 [0m[32mA[0m
[0m[31m-[0m[90m   2 [0m[97mb[0m                                [0m[90m│[0m[31m-[0m[90m   2 [0m[97mb[0m
[0m[31m-[0m[90m   3 [0m[97mc[0m                                [0m[90m│[0m[31m-[0m[90m   3 [0m[97mc[0m
[0m[31m-[0m[90m   4 [0m[97md[0m                                [0m[90m│[0m[31m-[0m[90m   4 [0m[97md[0m
[0m[33ma.txt --- 2/2 --- [0m                     [0m[90m│[0m
[0m[1m[36m│[0m[90m  17 [0m[97mq[0m                                [0m[90m│[0m[1m[36m│[0m[90m  17 [0m[97mq[0m
[0m[1m[36m│[0m[90m  18 [0m[97mr[0m                                [0m[90m│[0m[1m[36m│[0m[90m  18 [0m[97mr[0m
[0m[1m[36m│[0m[90m  19 [0m[97ms[0m                                [0m[90m│[0m[1m[36m│[0m[90m  19 [0m[97ms[0m
[0m[1m[36m│[0m[90m  20 [0m[31mt[0m                                [0m[90m│[0m[1m[36m│[0m[90m  20 [0m[32mT[0m




[0m[1m[30m[46m REV [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                                                       [0m
