stoat/src/snapshots/tui/stoat__test_harness__run_multiple_blocks.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: inject_output
focused: #1 of 1
mode: run
size: 60x16
---
┌──────────────────────────────────────────────────────────┐
│$ echo one                                                │
│one                                                       │
│                                                          │
│                                                          │
│                                                          │
│$ echo two                                                │
│two                                                       │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│$                                                         │
└──────────────────────────────────────────────────────────┘
