stoat/src/snapshots/tui/stoat__test_harness__run_output_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: inject_output
focused: #1 of 1
mode: run
size: 60x12
---
[0m[36m┌──────────────────────────────────────────────────────────┐[0m
[0m[36m│[0m[32m$ echo hello[0m                                              [0m[36m│[0m
[0m[36m│[0mhello                                                     [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│[0m                                                          [0m[36m│[0m
[0m[36m│$ [0m[30m[107m [0m                                                       [0m[36m│[0m
[0m[36m└──────────────────────────────────────────────────────────┘[0m
