stoat/src/snapshots/tui/stoat__test_harness__run_typed_input.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: o
focused: #1 of 1
mode: run
size: 60x12
---










[0m[36m$ [0m[97mecho hello[0m[30m[107m [0m
[0m[1m[30m[45m RUN [0m[1m[97m[100m (unnamed) [0m[97m[100m[run]                                       [0m
