stoat/src/snapshots/tui/stoat__test_harness__snapshot_move_down.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: j
focused: #1 of 1
mode: normal
size: 20x6
---
┌──────────────────┐
│abc               │
│def               │
│ghi               │
│                  │
└──────────────────┘
